--- a/resume_demo/main/templates/main/partials/footer.html
+++ b/resume_demo/main/templates/main/partials/footer.html
@@ -3,19 +3,52 @@
 Start Footer
 ================================= -->
 <footer>
-    <div class="footerCol">
+  <div class="footerCol">
     <div class="container">
-        <ul class="socialCol">
-        <li><a href="javascript:void(0)"><img src="{% static 'images/fb.svg' %}" alt="..."></a></li>
-        <li><a href="javascript:void(0)"><img src="{% static 'images/insta.svg' %}" alt="..."></a></li>
-        <li><a href="javascript:void(0)"><img src="{% static 'images/twitter.svg' %}" alt="..."></a></li>
-        <li><a href="javascript:void(0)"><img src="{% static 'images/linkedin.svg' %}" alt="..."></a></li>
-        </ul>
-        <div class="copyrightCol">
-        <p>Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="https://jamesgrangerdesign.co.uk/" target="_blank">James Granger Design</a></p>
-        </div>
+      <ul class="socialCol">
+        <li>
+          <a target="_blank" href="https://twitter.com/pie_Rsquare"
+            ><img src="{% static 'images/twitter.svg' %}" alt="..." style="margin-bottom:9px"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://linkedin.com/in/luwafemi-a-7466a91b2"
+            ><img src="{% static 'images/linkedin.svg' %}" alt="..." style="margin-bottom:9px"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://wa.me/2348180922062">
+            <i class="fab fa-whatsapp socials"></i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://t.me/Luwafemi_A">
+            <i class="fab fa-telegram socials"></i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/luwafemi">
+            <i class="fab fa-github socials"></i>
+          </a>
+        </li>
+        <li>
+          <a href="mailto:aladefemi1@gmail.com">
+            <img
+              style="width: 32px; margin-bottom:11px"
+              src="/static/images/gmail.svg"
+              alt=""
+            />
+          </a>
+        </li>
+      </ul>
+      <div class="copyrightCol">
+        <p>
+          Copyright ©{% now 'Y' %} All rights reserved. Designed by
+          <a href="javascript:void(0)">James Granger Design</a>
+        </p>
+      </div>
     </div>
-    </div>
+  </div>
 </footer>
 <!-- ================================
 End Footer
