--- a/resume_demo/main/templates/main/base.html
+++ b/resume_demo/main/templates/main/base.html
@@ -12,12 +12,18 @@
     <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="keywords" content="{% block keywords %}{% endblock %}">
 
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/icon.jpg' %}">
-    <link rel="apple-touch-icon" type="image/jpg" href="{% static 'images/icon.jpg' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/Logo.png' %}">
+    <link rel="apple-touch-icon" type="image/jpg" href="{% static 'images/Logo.png' %}">
 
     <!-- ================================
     Start CSS
     ================================= -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+      integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA="
+      crossorigin="anonymous"
+    />
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.css">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
