--- a/resume_demo/main/templates/main/blog.html
+++ b/resume_demo/main/templates/main/blog.html
@@ -1,10 +1,9 @@
-{% extends 'main/base.html' %}
-{% load static %}
+{% extends 'main/base.html' %} {% load static %}
 
 <!-- ================================
 Start SEO blocks
 ================================= -->
-{% block title %}{% endblock %}
+{% block title %}{% endblock %} 
 {% block decription %}{% endblock %}
 {% block keywords %}{% endblock %}
 <!-- ================================
@@ -34,7 +33,7 @@ Start Content
 <section>
   <div class="innerPageBannerCol">
     <div class="container">
-      <div class="row g-4 g-md-3  align-items-center">
+      <div class="row g-4 g-md-3 align-items-center">
         <div class="col-md-6">
           <div class="bannerContent">
             <h1 class="xlTitle pb-md-3">See my recent blogs below</h1>
@@ -53,13 +52,13 @@ Start Content
           {% for obj in object_list %}
           <div class="col-md-6 pColMain">
             <div class="pCol">
-              <a href="{% url 'main:blog' slug=obj.slug %}" >
-              <img src="{{obj.image.url}}" alt="..." class="pImg">
+              <p>{{obj.name}}</p>
+              <a href="{% url 'main:blog' slug=obj.slug %}">
+                <img src="{{obj.image.url}}" alt="..." class="pImg" />
               </a>
             </div>
           </div>
           {% endfor %}
-
         </div>
       </div>
     </div>
@@ -68,5 +67,4 @@ Start Content
 <!-- ================================
 End Content
 ================================= -->
-{%endblock%} 
-    
+{%endblock%}
