--- a/main/templates/main/partials/footer.html
+++ b/main/templates/main/partials/footer.html
@@ -8,12 +8,12 @@ Start Footer
       <ul class="socialCol">
         <li>
           <a target="_blank" href="https://twitter.com/pie_Rsquare"
-            ><img src="{% static 'images/twitter.svg' %}" alt="..." style="margin-bottom:9px"
+            ><img src="{% static 'images/twitter.svg' %}" alt="twitter_icon" style="margin-bottom:9px"
           /></a>
         </li>
         <li>
           <a target="_blank" href="https://linkedin.com/in/luwafemi-a-7466a91b2"
-            ><img src="{% static 'images/linkedin.svg' %}" alt="..." style="margin-bottom:9px"
+            ><img src="{% static 'images/linkedin.svg' %}" alt="linkedin_icon" style="margin-bottom:9px"
           /></a>
         </li>
         <li>
@@ -36,7 +36,7 @@ Start Footer
             <img
               style="width: 32px; margin-bottom:11px"
               src="/static/images/gmail.svg"
-              alt=""
+              alt="gmail_icon"
             />
           </a>
         </li>
