Add minor changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -512,6 +512,28 @@ body.navToggleActive {
 .portfolioRow .pColMain:nth-child(2n-1) .pCol {
   margin-top: -110px;
 }
+
+/* ........................................... */
+
+input[type=text], input[type=email], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+/* contact form */
+.errorlist, .nonfield{
+ color: red;
+}
+
+
+/* MEDIA QUERIES */
+
 @media (min-width:576px) {
   .swiper-pagination {
     display: none;
@@ -785,18 +807,4 @@ body.navToggleActive {
   }
 }
 
-input[type=text], input[type=email], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical
-}
-
-/* contact form */
-.errorlist, .nonfield{
- color: red;
-}
+/* .................................................................. */
