--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -54,7 +54,7 @@ Start Content
             <div class="pCol">
               <p>{{obj.name}}</p>
               <a href="{% url 'main:blog' slug=obj.slug %}">
-                <img src="{{obj.image.url}}" alt="..." class="pImg" />
+                <img src="{{obj.image.url}}" alt="image" class="pImg" />
               </a>
             </div>
           </div>
